# M2R-random-forests

./: IRIS.ipynb  README.md  example_code_iris.ipynb  pyproject.toml
random-forests/: __init__.py  decision_trees.py  decision_trees_Ni.py  decision_trees_improved.py  random_forests.py  random_forests_bad.py  random_forests_improved.py
simulations/: RF&IRF.ipynb  bad_random_forest.pickle  bad_random_forests.ipynb  comparing_sklearn.ipynb  criterion_vary.ipynb  different_classifiers.ipynb  experiment_template.ipynb  results_test_plots.pickle  results_test_plots2.pickle  sim_vary_m_feats.ipynb  sim_vary_stratify.ipynb  simulations.ipynb  sklearn_comparison.pickle  test_boosting.pickle  test_breast_cancer_n30_m.npz  test_breast_cancer_n30_m_improved.npz  test_heart_n50.npz  test_irf_heart_n50.npz  test_irf_titanic_n50.npz  test_n.npz  test_n_improved.npz  test_rf_n50.npz  test_titanic_n30_m.npz  test_titanic_n50.npz  test_titanic_n50_m4.npz  test_titanic_n_m.npz  trying_datasets copy.ipynb  trying_datasets.ipynb  vary_m_feats_iris_results.pickle  vary_m_feats_mushrooms_results.pickle  vary_m_features.ipynb  vary_m_features.pickle  vary_m_features_n_trees.pickle  vary_m_features_n_trees_breast.pickle  vary_max_depth.ipynb  vary_max_depth.pickle  vary_max_depth_breast.pickle  vary_n_candidates.ipynb  vary_n_candidates.pickle  vary_n_candidates_breasts.pickle  (+7 more)
tests/: test_decision_tree  test_decision_tree.py  test_improved.py
