[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "random-forests"
version = "1.0"
authors = [
    {name = "Li Yiyan", email = "yiyan.li21@imperial.ac.uk"},
    {name = "Graves Linden"},
    {name = "Song Chengdong"},
    {name = "Sugiura Koya"},
    {name = "Ni Alex"},
]
description = "A random forest implementation."
dependencies = [
    "numpy",
]